--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.7",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "phpoffice/phpspreadsheet": "^1.28"
+        "openai-php/laravel": "^0.5.2",
+        "phpoffice/phpspreadsheet": "^1.28",
+        "tectalic/openai": "^1.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
