--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "vue": "^3.2.36",
         "vue-accessible-color-picker": "^4.1.2",
         "vue-color-kit": "^1.0.5",
+        "vue-google-autocomplete": "^1.1.4",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.1.6",
         "vue3-lottie": "^2.5.0"
