On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   app/Http/Controllers/API/REACT/CommissionStatementController.php
	modified:   composer.json
	modified:   composer.lock
	modified:   resources/js/components/reports/react.vue
	modified:   routes/api.php
	modified:   storage/fonts/installed-fonts.json

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "openai-php/client": "^0.5.2",
         "openai-php/laravel": "^0.5.2",
         "phpoffice/phpspreadsheet": "^1.28",
+        "stechstudio/laravel-zipstream": "^4.13",
         "tectalic/openai": "^1.4"
     },
     "require-dev": {
